// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The level manager actions Matches the current snapshot 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={false}
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </Styled(Button)>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The level manager actions Matches the current snapshot if a level isn't selected 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <Styled(Button)
        disabled={null}
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled={true}
        onClick={[Function]}
      >
        <span>
          Rename
        </span>
      </Styled(Button)>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`The level manager actions Matches the current snapshot if renaming a level 1`] = `
<styled.div>
  <styled.ul>
    <styled.li>
      <Styled(Button)
        disabled="1"
        onClick={[Function]}
      >
        <span>
          New
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Load
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Save
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Delete
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        disabled="1"
        onClick={[Function]}
      >
        <span>
          Copy
        </span>
      </Styled(Button)>
    </styled.li>
    <styled.li>
      <Styled(Button)
        onClick={[Function]}
      >
        <span>
          Done
        </span>
      </Styled(Button)>
    </styled.li>
  </styled.ul>
</styled.div>
`;
